# ekg

./: CMakeLists.txt  Makefile  README.md  ekg.sublime-project  partitions.csv  sdkconfig
main/: CMakeLists.txt  ekg_main.c
main/include/: a2dp.h  ble.h  ble_profiles.h  classifier.h  config.h  err.h  http.h  ipc.h  msg.h  status.h  tasks.h  wifi.h
main/include/tasks/: ble_task.h  ekg_task.h  led_task.h  sample_task.h  stream_task.h  telemetry_task.h  wifi_task.h
main/src/: a2dp.c  ble.c  classifier.c  err.c  http.c  ipc.c  msg.c  status.c  wifi.c
main/src/tasks/: ble_task.c  ekg_task.c  led_task.c  sample_task.c  stream_task.c  telemetry_task.c  wifi_task.c
